# cream-code

./: README.md  TASKS.md  pyproject.toml
creamcode/: .gitignore  LICENSE  README.md  TASKS.md  pyproject.toml
creamcode/docs/: DESIGN.md  TASKS.md  TUTORIAL.md
creamcode/skills/: README.md
creamcode/src/creamcode/: __init__.py  app.py  types.py
creamcode/tests/: test_bash_tool.py  test_minimax_adapter.py  test_ollama_adapter.py  test_plugin_manager.py  test_short_term_memory.py  test_types.py  test_web_tools.py
creamcode/tests/test_cost/: test_tracker.py
creamcode/tests/test_mcp/: test_client.py
creamcode/tests/test_skills/: test_loader.py  test_skill.py
docs/: DESIGN.md
plugins/system/: adapter_core.py  cli_core.py  event_bus.py  mcp_client.py  memory_system.py  skill_system.py  tool_system.py
src/creamcode/: app.py  main.py  types.py
src/creamcode/adapters/: __init__.py  anthropic.py  base.py  events.py  minimax.py  ollama.py  openai.py  registry.py
src/creamcode/core/: __init__.py  adapter_framework.py  cli_framework.py  event_bus.py  lifecycle.py  (+1 more)
tests/: test_adapter_framework.py  test_anthropic_adapter.py  test_builtins.py  test_cli_framework.py  test_context_manager.py  test_event_bus.py  test_file_tools.py  test_lifecycle.py  test_long_term_memory.py  test_openai_adapter.py  test_plugin_manager.py  test_tool_registry.py  test_types.py  test_working_memory.py
tests/test_config/: test_config.py  test_loader.py
tests/test_mcp/: test_manager.py  test_protocol.py  test_tool_adapter.py
tests/test_skills/: test_matcher.py  test_registry.py
(+55 files in other folders)
